<resources>
    <string name="app_name">Alertas Club LA NACIÓN</string>
    <string name="title_activity_actividad_principal">ActividadPrincipal</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="descripcion_aplicacion">Con la aplicación podrás recibir notificaciones de los beneficios que encontremos a tu alrededor</string>
    <string name="selecciona_tarjeta">Seleccioná tu tarjeta</string>
    <string name="selecciona_tarjeta_para_continuar">Debes seleccionar una tarjeta para continuar</string>
    <string name="aceptar">Aceptar</string>
    <string name="selecciona_categorias">Seleccioná las categorías para las cuales te gustaría recibir notificaciones de beneficios cercanos</string>
    <string name="ilimitado">Ilimitado</string>
    <string name="notificaciones_ilimitadas">Notificaciones ilimitadas</string>
    <string name="notificaciones">notificaciones</string>
    <string name="descripcion_distancia_maxima">Recibir notificaciones de beneficios que estén a una distancia máxima de:</string>
    <string name="descripcion_maximas_notificaciones">Recibir por día como máximo:</string>
    <string name="descripcion_rango_horario">Recibir notificaciones dentro del siguiente rango horario:</string>
    <string name="dialogo_radio_titulo">Radio</string>
    <string name="cancelar">Cancelar</string>
    <string name="radio_label">Radio</string>
    <string name="dialogo_maximas_notificaciones_titulo">Cantidad máxima de notificaciones diarias</string>
    <string name="dialogo_rango_horario_titulo">Rango horario</string>
    <string name="desde">DESDE:</string>
    <string name="hasta">HASTA:</string>
    <string name="horario_invalido">El horario introducido es inválido, intentá con otro rango</string>
    <string name="title_activity_actividad_detalle_beneficio">ActividadDetalleBeneficio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titlo_actividad_detalle_beneficio">Detalle del beneficio</string>

    <string name="listo">¡Listo!</string>
    <string name="ya_estas_listo">En breve comenzarás a recibir novedades respecto a los beneficios cercanos a tu zona. Usaremos la información que configuraste para asegurarnos de ofrecerte sólamente aquellos beneficios que pueden interesarte. Si querés cambiar alguna de tus preferencias, simplemente andá hacia atrás y modificalas. ¡Gracias por utilizar Alertas Club LA NACIÓN!</string>
    <string name="gracias">¡Gracias por utilizar Alertas Club LA NACIÓN!</string>
    <string name="no_veras_este_beneficio">No volverás a ver notificaciones de este beneficio</string>
    <string name="deshacer">Deshacer</string>
    <string name="veras_este_beneficio">Volverás a ver notificaciones de este beneficio</string>


</resources>
