<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_club">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/listo"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center" />


            <TextView
                android:id="@+id/ya_estas_listo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/ya_estas_listo"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/gracias"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/gracias"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>