<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bienvenido_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/bienvenido_a"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/nombre_aplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/descripcion_aplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/descripcion_aplicacion"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/selecciona_tarjetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/selecciona_tarjeta"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"/>

            <RelativeLayout
                android:id="@+id/classic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_boton_transparente"
                android:padding="10dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/classic"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/selector_boton_transparente"
                android:padding="10dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/premium"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>